[package]
name = "redisrecipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.2"
tokio = {version = "1", features = ["full"]}
json = "0.12.4"
rocket = {version = "0.5.0-rc.1"}
rocket_cors = "0.5.1"